tests/baselines/reference/stringLiteralType.errors.txt
==== tests/cases/conformance/types/primitives/stringLiteral/stringLiteralType.ts (1 errors) ====
    var x: 'hi';
           ~~~~
!!! error TS1110: Type expected.
    
    function f(x: 'hi');
    function f(x: string);
    function f(x: any) {
    }